<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#f2f2f2">

        <LinearLayout
            android:gravity="center_vertical"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/cpgl"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:onClick="userManager"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="#fff"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@mipmap/grxx" />

                <TextView
                    android:layout_above="@+id/saoma"
                    android:layout_alignLeft="@+id/person"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="#333"
                    android:text="User management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/fcgl"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:onClick="bookManager"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="#fff"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@mipmap/ddgl" />

                <TextView
                    android:layout_above="@+id/saoma"
                    android:layout_alignLeft="@+id/person"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="#333"
                    android:text="Books management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#f2f2f2">

        <LinearLayout
            android:gravity="center_vertical"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/mmm1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:onClick="activityManager"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="#fff"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@mipmap/cpgl" />

                <TextView
                    android:layout_above="@+id/saoma"
                    android:layout_alignLeft="@+id/person"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="#333"
                    android:text="Activity management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:background="#fff"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/mmm2"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:clickable="true"
                android:onClick="messageManager"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="#fff"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@mipmap/zwgl" />

                <TextView
                    android:layout_above="@+id/saoma"
                    android:layout_alignLeft="@+id/person"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="#333"
                    android:text="Message management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>