<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="Statistical" app:showAsAction="always" android:id="@+id/statistical" android:icon="@mipmap/statistical" />
    <item android:title="Artifact" app:showAsAction="always" android:id="@+id/artifact" android:icon="@mipmap/book" />
    <item android:title="Logout" app:showAsAction="always" android:id="@+id/exit" android:icon="@mipmap/logout" />

</menu>